# Coordinate

./: .gitignore  CHANGELOG.md  README.md  ci.ps1  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
src/coordinate/: __init__.py
src/coordinatus/: __init__.py  coordinate.py  frame.py  transforms.py  visualization.py
src/coordinatus/transforms/: __init__.py  rotate.py  scale.py  translate.py
src/relative/: __init__.py  coordinate.py  system.py
tests/coordinate/: test_coordinate.py  test_frame.py  test_system.py  test_transforms.py
tests/coordinatus/: test_coordinate.py  test_frame.py  test_init.py  test_transforms.py  test_visualization.py
tests/coordinatus/transforms/: test_rotate.py  test_scale.py  test_translate.py
