[project]
name = "coordinate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manu Gira", email = "manu.gira@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
]

[project.scripts]
coordinate = "coordinate:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
