[project]
name = "coordinate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manu Gira", email = "manu.gira@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
]

[project.scripts]
coordinate = "coordinate:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff.lint.per-file-ignores]
"src/coordinate/__init__.py" = ["F401"]  # Ignore `F401` (imported but unused)
